--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,8 @@ author: "Alyssa Grube"
 date: "11/28/2021"
 output: html_document
 ---
-Link to slide decks: 
+Link to slide decks RMD: https://github.com/stat850-unl/11-presentation-aegrube6/commit/446f4083573dca92dc8137383d3351fb36a7c3e0
+
+Link to slide decks LaTeX: 
 
 Link to CV: https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf
